Update ASTGenerationSTVisitor.java